--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
             /* MODIFIED: Change font color to var(--color-text) (#2c3e50) for better contrast */
             color: var(--color-text) !important; 
         }
-        .medium-button, {
+        .medium-button {
             background-color: var(--color-text);
         }
-        .medium-button:hover:not(:disabled), {
+        .medium-button:hover:not(:disabled) {
             background-color: #162029;
         }
         
