--- a/index.html
+++ b/index.html
@@ -849,6 +849,9 @@
         } else if (CURRENT_USER_ID === 'Marcia') { 
             avatarElement.src = BASE_IMAGE_URL + "Marcia.jpg"; 
             avatarElement.style.display = 'block';
+        } else if (CURRENT_USER_ID === 'Mariane') { 
+            avatarElement.src = BASE_IMAGE_URL + "Mariane.jpg"; 
+            avatarElement.style.display = 'block';
         } else {
             avatarElement.style.display = 'none';
             avatarElement.src = ''; // Clear source
